# SPOLKS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  something.cpp
client/: CMakeLists.txt  main.cpp
client/src/: main.cpp
config/: config.hpp.in
protocol/: Protocol.hpp  Upload.hpp  Utils.hpp
server/: CMakeLists.txt  main.cpp
server/include/: AcceptHandler.hpp  ClientHandler.hpp  ClientService.hpp  Server.hpp  ServerHandler.hpp  ServerInterface.hpp  ServerLinux.hpp  ServerWindows.hpp  SessionData.hpp  SocketAccess.hpp
server/src/: AcceptHandler.cpp  ClientHandler.cpp  ClientService.cpp  ServerLinux.cpp  SessionData.cpp  SocketAccess.cpp  main.cpp
src/: main.cpp
thread_pool/: CMakeLists.txt  ThreadPool.hpp
thread_pool/include/: Task.hpp  ThreadPool.hpp
thread_pool/src/: ThreadPool.cpp
thread_pool/test/: thread_pool_test.cpp
